Catch possible NPE for missing entry in JDL